[package]
name = "monkey_typewriter"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "Ported from https://github.com/cyclic-software/monkey-typewriter"
authors = ["Sahit"]
repository = "https://github.com/sahitono/monkey-typewriter"
homepage = "https://github.com/sahitono/monkey-typewriter"
documentation = "https://github.com/sahitono/monkey-typewriter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "monkey_typewriter"
path = "src/lib.rs"

[[bin]]
name = "monkey_typewriter"
path = "src/bin/main.rs"


[dependencies]
rand = "0.8.5"
